# Technopark_Cpp

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  main.c  shapes.c  shapes.h  tests.cpp
project/: main_parallel.c  main_simple.c
project/common/: structs.h
project/parallel/: parallel.c  parallel.h
project/simple/: simple.c  simple.h
project/test/: gtests.cpp
project/test/data/: input_1000.txt  input_10000.txt  input_5000.txt  input_50000.txt  positions.txt  wrong_file.txt
